# lxqt-connman-applet

./: .cmake.env  .make.env  AUTHORS  CMakeLists.txt  README.md  agent.cpp  agent.h  agent_adaptor.cpp  agent_adaptor.h  agent_main.cpp  agentadaptor.cpp  agentadaptor.h  agentdialog.cpp  agentdialog.h  agentdialog.ui  appletstrings.cpp  clickableframe.h  connectionstate.cpp  connectionstate.h  connmannobject.cpp  connmannobject.h  connmanobject.cpp  connmanobject.h  controller.cpp  controller.h  dbus_types.cpp  dbus_types.h  dialog.cpp  dialog.h  dialog.ui  extract_manager_xml.sh  iconfinder.cpp  iconfinder.h  iconproducer.cpp  iconproducer.h  iconviewer.cpp  itemcontroller.cpp  itemcontroller.h  itemwrapper.cpp  itemwrapper.h  (+34 more)
.github/: ISSUE_TEMPLATE.md
applet/: dbus_types.h  net.connman.Service.xml  net.connman.Technology.xml  systemtray.cpp
devtools/: extract_manager_api_xml.sh  extract_service_api_xml.sh  extract_technology_api_xml.sh
iconviewer/: CMakeLists.txt  iconviewer.h  iconviewer.ui  main.cpp
translations/: lxqt-connman-applet.ts  lxqt-connman-applet_da.ts  lxqt-connman-applet_de.ts  lxqt-connman-applet_gl.ts  lxqt-connman-applet_hr.ts  lxqt-connman-applet_lt.ts  lxqt-connman-applet_pl.ts  lxqt-connman-applet_pt.ts  lxqt-connman-applet_tr.ts
